--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.11",
+    "@types/number-to-words": "^1.2.0",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
     "moment": "^2.29.1",
-    "number-to-words": "^1.2.4",
+    "number-to-words": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -43,5 +44,4 @@
       "last 1 safari version"
     ]
   }
-
 }
